--- a/public/options.html
+++ b/public/options.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My Test Extension Options</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo-large.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bartender Options</title>
   </head>
   <body>
-    <select id="color">
-      <option value="red">red</option>
-      <option value="green">green</option>
-      <option value="blue">blue</option>
-      <option value="yellow">yellow</option>
-    </select>
-
-    <label>
-      <input type="checkbox" id="like" />
-      I like colors.
-    </label>
-
-    <div id="status"></div>
-    <button id="save">Save</button>
-
-    <script src="options.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/options.js"></script>
   </body>
 </html>
